google tag manager

--- a/pythonanywhere/templates/home.html
+++ b/pythonanywhere/templates/home.html
@@ -12,6 +12,14 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <script src="/static/js/check.js"></script>
   <meta name="google-site-verification" content="vBSViwn_En_engn8t-u5fGXCxi32UGP8P4NZN2kIuuM" />
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-1EE1SJQ4TW"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-1EE1SJQ4TW');
+    </script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
