--- a/pythonanywhere/templates/home_dutch.html
+++ b/pythonanywhere/templates/home_dutch.html
@@ -25,6 +25,14 @@
     }
   }
   </script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1EE1SJQ4TW"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-1EE1SJQ4TW');
+</script>
     <style>
         :root {
             --primary: #8a4fff;
